Uso npx vite build

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "cd Coup && npm run dev",
-    "build": "cd Coup && npm ci --no-audit && ./node_modules/.bin/vite build",
+    "build": "cd Coup && npm ci --no-audit && npx vite build",
     "start": "cd Coup && NODE_ENV=production node server/index.js",
     "lint": "cd Coup && npm run lint",
     "preview": "cd Coup && npm run preview",
