--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "coup-root-proxy",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "cd Coup && npm run dev",
-    "build": "cd Coup && npm ci --no-audit && npx vite build",
-    "start": "cd Coup && NODE_ENV=production node server/index.js",
-    "lint": "cd Coup && npm run lint",
-    "preview": "cd Coup && npm run preview",
-    "test": "cd Coup && npm run test"
+    "dev": "npm run dev --prefix Coup",
+    "build": "npm install --prefix Coup && npm run build --prefix Coup",
+    "start": "npm start --prefix Coup",
+    "lint": "npm run lint --prefix Coup",
+    "preview": "npm run preview --prefix Coup",
+    "test": "npm run test --prefix Coup"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
